Fixed issue with calling preprocess() from horizon experiment. Ensured model name always reflects prediction horizon

--- a/config.yml
+++ b/config.yml
@@ -25,9 +25,9 @@ PATHS:
 # Constants pertaining to data structure
 DATA:
   N_WEEKS: 12
-  GROUND_TRUTH_DATE: '2020-02-05'
+  GROUND_TRUTH_DATE: 'today'
   CHRONIC_THRESHOLD: 180
-  INCLUDE_SPDATS: true
+  INCLUDE_SPDATS: false
   FEATURES_TO_DROP_FIRST: ['OrganizationID','MovedInDate','HealthIssueMedicationName','OtherMedications','DietCatetory','FoodType',
                            'ConsentType','ClientHeightCM','EyeColour','HairColour','ProvinceOfBirth','CityOfBirth','CountryOfBirth',
                            'ServiceProvider']
@@ -81,14 +81,14 @@ TRAIN:
   BATCH_SIZE: 128
   POS_WEIGHT: 0.6
   IMB_STRATEGY: 'class_weight'  # One of {'class_weight', 'random_oversample', 'smote', 'adasyn'}
-  EXPERIMENT_TYPE: 'hparam_search' # One of {'single_train', 'multi_train', 'hparam_search'}
+  EXPERIMENT_TYPE: 'single_train' # One of {'single_train', 'multi_train', 'hparam_search'}
   METRIC_MONITOR: 'recall'
   NUM_RUNS: 10
   THRESHOLDS: 0.5   # Can be changed to list of values in range [0, 1]
   HP:
     METRICS: ['accuracy', 'loss', 'recall', 'precision']
-    COMBINATIONS: 3
-    REPEATS: 1
+    COMBINATIONS: 60
+    REPEATS: 2
     RANGES:
       NODES0: [60, 80, 100, 120, 140]
       NODES1: [40, 60, 80, 100]
