--- a/config.yml
+++ b/config.yml
@@ -1,9 +1,9 @@
 # Relevant file/directory paths
 PATHS:
-  RAW_DATA: 'data/raw/HIFIS_Clients_test.csv'
+  RAW_DATA: 'data/raw/HIFIS_Clients.csv'
   RAW_SPDAT_DATA: 'data/raw/SPDATS.json'
-  PROCESSED_DATA: 'data/processed/HIFIS_Processed_test.csv'
-  PROCESSED_OHE_DATA: 'data/processed/HIFIS_Processed_OHE_test.csv'
+  PROCESSED_DATA: 'data/processed/HIFIS_Processed.csv'
+  PROCESSED_OHE_DATA: 'data/processed/HIFIS_Processed_OHE.csv'
   GROUND_TRUTH: 'data/processed/GroundTruth.csv'
   DATA_INFO: './data/interpretability/data_info.yml'
   MODEL_WEIGHTS: 'results/models/model.h5'
@@ -27,7 +27,7 @@ DATA:
   N_WEEKS: 12
   GROUND_TRUTH_DATE: 'today'
   CHRONIC_THRESHOLD: 180
-  INCLUDE_SPDATS: false
+  INCLUDE_SPDATS: true
   FEATURES_TO_DROP_FIRST: ['OrganizationID','MovedInDate','HealthIssueMedicationName','OtherMedications','DietCatetory','FoodType',
                            'ConsentType','ClientHeightCM','EyeColour','HairColour','ProvinceOfBirth','CityOfBirth','CountryOfBirth',
                            'ServiceProvider']
