--- a/config.yml
+++ b/config.yml
@@ -78,7 +78,7 @@ TRAIN:
   VAL_SPLIT: 0.1
   TEST_SPLIT: 0.1
   EPOCHS: 300
-  BATCH_SIZE: 128
+  BATCH_SIZE: 256
   POS_WEIGHT: 0.6
   IMB_STRATEGY: 'class_weight'  # One of {'class_weight', 'random_oversample', 'smote', 'adasyn'}
   EXPERIMENT_TYPE: 'hparam_search' # One of {'single_train', 'multi_train', 'hparam_search'}
@@ -90,18 +90,18 @@ TRAIN:
     COMBINATIONS: 60
     REPEATS: 2
     RANGES:
-      NODES0: [60, 80, 100, 120, 140]
-      NODES1: [40, 60, 80, 100]
-      LAYERS: [2, 3, 4]
-      DROPOUT: [0.5, 0.5]
-      LR: [-3.5, -3.5]  # Logarithmic scale (10^x)
-      OPTIMIZER: ['adam']
-      BETA_1: [-1.0, -1.0]  # 1st moment for Adam. Log scale (1 - 10^x)
-      BETA_2: [-3.0, -3.0]  # 2nd moment for Adam. Log scale (1 - 10^x)
-      L2_LAMBDA: [-1.5, -1.5]   # Logarithmic scale (10^x)
-      BATCH_SIZE: [128, 128]
-      POS_WEIGHT: [0.6, 0.6]  # Weight multiplier for positive class
-      IMB_STRATEGY: ['class_weight']
+      NODES0: [80, 100]               # Discrete range
+      NODES1: [60, 80]                # Discrete range
+      LAYERS: [2, 2]                  # Discrete range
+      DROPOUT: [0.2, 0.4]             # Real range
+      LR: [-3.0, -3.0]                # Real range on logarithmic scale (10^x)
+      OPTIMIZER: ['adam']             # Discrete range
+      BETA_1: [-1.0, -1.0]            # 1st moment for Adam. Real range on log scale (1 - 10^x)
+      BETA_2: [-3.0, -3.0]            # 2nd moment for Adam. Real range on log scale (1 - 10^x)
+      L2_LAMBDA: [-2.0, -2.0]         # Real range on log scale (10^x)
+      BATCH_SIZE: [256, 256]          # Discrete range
+      POS_WEIGHT: [0.6, 0.6]          # Weight multiplier for positive class. Real range
+      IMB_STRATEGY: ['class_weight']  # Discrete range
 
 # LIME explanations
 LIME:
