--- a/config.yml
+++ b/config.yml
@@ -109,10 +109,10 @@ LIME:
   FEATURE_SELECTION: 'lasso_path'
   NUM_FEATURES: 15
   NUM_SAMPLES: 85000
+  MIN_DISPLAY_WEIGHT: 0.005
   SP:
     SAMPLE_SIZE: 50
     NUM_EXPLANATIONS: 10
-    EXP_LIMIT: 20
 
 # Predictive horizon search experiment
 HORIZON_SEARCH:
