Set hyperparameters according to results from 4 searches

--- a/config.yml
+++ b/config.yml
@@ -67,9 +67,9 @@ NN:
     NODES:
       DENSE0: 80
       DENSE1: 60
-    LAYERS: 2
-    L2_LAMBDA: 0.03
-    DROPOUT: 0.5
+    LAYERS: 4
+    L2_LAMBDA: 0.01
+    DROPOUT: 0.35
     LR: 0.0003
 
 # Training
@@ -81,10 +81,11 @@ TRAIN:
   BATCH_SIZE: 256
   POS_WEIGHT: 0.6
   IMB_STRATEGY: 'class_weight'  # One of {'class_weight', 'random_oversample', 'smote', 'adasyn'}
-  EXPERIMENT_TYPE: 'hparam_search' # One of {'single_train', 'multi_train', 'hparam_search'}
+  EXPERIMENT_TYPE: 'single_train' # One of {'single_train', 'multi_train', 'hparam_search'}
   METRIC_MONITOR: 'recall'
   NUM_RUNS: 10
   THRESHOLDS: 0.5   # Can be changed to list of values in range [0, 1]
+  PATIENCE: 15
   HP:
     METRICS: ['accuracy', 'loss', 'recall', 'precision', 'auc']
     COMBINATIONS: 60
