--- a/config.yml
+++ b/config.yml
@@ -7,7 +7,7 @@ PATHS:
   GROUND_TRUTH: 'data/processed/GroundTruth.csv'
   DATA_INFO: './data/interpretability/data_info.yml'
   MODEL_WEIGHTS: 'results/models/model.h5'
-  MODEL_TO_LOAD: 'results/models/model_spdat0.h5'
+  MODEL_TO_LOAD: 'results/models/model.h5'
   IMAGES: 'documents/generated_images/'
   LOGS: 'results\\logs\\'
   HORIZON_SEARCH: 'results/experiments/horizon_search'
@@ -111,12 +111,11 @@ LIME:
   KERNEL_WIDTH: 2.5
   FEATURE_SELECTION: 'lasso_path'
   NUM_FEATURES: 15
-  NUM_SAMPLES: 85000
-  MIN_DISPLAYED_WEIGHT: 0.001
-  MAX_DISPLAYED_RULES: 20
+  NUM_SAMPLES: 5000
+  MAX_DISPLAYED_RULES: 30
   SP:
-    SAMPLE_SIZE: 250
-    NUM_EXPLANATIONS: 15
+    SAMPLE_SIZE: 10
+    NUM_EXPLANATIONS: 8
 
 # Predictive horizon search experiment
 HORIZON_SEARCH:
