Reset defaults in config

--- a/config.yml
+++ b/config.yml
@@ -7,7 +7,7 @@ PATHS:
   GROUND_TRUTH: 'data/processed/GroundTruth.csv'
   DATA_INFO: './data/interpretability/data_info.yml'
   MODEL_WEIGHTS: 'results/models/model.h5'
-  MODEL_TO_LOAD: 'results/models/model_spdat2.h5'
+  MODEL_TO_LOAD: 'results/models/model.h5'
   IMAGES: 'documents/generated_images/'
   LOGS: 'results\\logs\\'
   HORIZON_SEARCH: 'results/experiments/horizon_search'
@@ -25,8 +25,8 @@ PATHS:
 
 # Constants pertaining to data structure
 DATA:
-  N_WEEKS: 12
-  GROUND_TRUTH_DATE: '2020-02-14'
+  N_WEEKS: 26
+  GROUND_TRUTH_DATE: 'today'
   CHRONIC_THRESHOLD: 180
   FEATURES_TO_DROP_FIRST: ['OrganizationID','MovedInDate','HealthIssueMedicationName','OtherMedications','DietCatetory','FoodType',
                            'ConsentType','ClientHeightCM','EyeColour','HairColour','ProvinceOfBirth','CityOfBirth','CountryOfBirth',
@@ -112,11 +112,11 @@ LIME:
   KERNEL_WIDTH: 2.5
   FEATURE_SELECTION: 'lasso_path'
   NUM_FEATURES: 15
-  NUM_SAMPLES: 5000
+  NUM_SAMPLES: 85000
   MAX_DISPLAYED_RULES: 30
   SP:
-    SAMPLE_SIZE: 10
-    NUM_EXPLANATIONS: 8
+    SAMPLE_SIZE: 300
+    NUM_EXPLANATIONS: 15
 
 # Predictive horizon search experiment
 HORIZON_SEARCH:
