--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-lime==0.1.1.37
-tensorflow_gpu==2.0.0
-category_encoders==2.1.0
-matplotlib==3.1.1
-scipy==1.4.1
-pandas==0.25.3
-dill==0.3.1.1
-numpy==1.17.4
-tqdm==4.40.2
 imbalanced_learn==0.6.1
-tensorboard==2.0.2
+matplotlib==3.1.1
+dill==0.3.0
+~ensorboard==2.0.2
+category_encoders==2.1.0
+tensorflow==2.1.0
+lime==0.1.1.37
+pandas==0.25.3
+scipy==1.4.1
+tqdm==4.40.2
+numpy==1.17.4
