--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-imbalanced_learn==0.6.1
 matplotlib==3.1.1
-dill==0.3.0
-~ensorboard==2.0.2
-category_encoders==2.1.0
-tensorflow==2.1.0
-lime==0.1.1.37
-pandas==0.25.3
 scipy==1.4.1
-tqdm==4.40.2
+tensorboard==2.0.2
 numpy==1.17.4
+lime==0.1.1.37
+category_encoders==2.1.0
+dill==0.3.0
+tqdm==4.40.2
+imbalanced_learn==0.6.1
+tensorflow_gpu==2.0.0
+pandas==0.25.3
