--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,13 @@
 pyyaml==5.2
 matplotlib==3.1.1
-scipy==1.4.1
-tensorboard==2.0.2
+pandas==0.25.3
 numpy==1.17.4
-lime==0.1.1.37
-category_encoders==2.1.0
-dill==0.3.0
-tqdm==4.40.2
+scipy==1.4.1
 imbalanced_learn==0.6.1
 tensorflow_gpu==2.0.0
-pandas==0.25.3
+tensorboard==2.0.2
+kmodes==0.10.2
+dill==0.3.0
+lime==0.1.1.37
+category_encoders==2.1.0
+tqdm==4.40.2
