--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,9 @@ results/logs/training/*
 results/logs/hparam_search/*
 results/models/*
 results/predictions/*
+azure/ws_config.json
+azure/.ipynb_checkpoints
+/.amlignore
 !data/processed/.gitkeep
 !data/interpretability/.gitkeep
 !data/raw/.gitkeep
