--- a/config.yml
+++ b/config.yml
@@ -5,8 +5,8 @@ PATHS:
   PROCESSED_DATA: 'data/processed/HIFIS_Processed.csv'
   PROCESSED_OHE_DATA: 'data/processed/HIFIS_Processed_OHE.csv'
   GROUND_TRUTH: 'data/processed/GroundTruth.csv'
-  DATA_INFO: './data/interpretability/data_info.yml'
-  MODEL_WEIGHTS: 'results/models/model.h5'
+  DATA_INFO: 'data/interpretability/data_info.yml'
+  MODEL_WEIGHTS: 'results/models/'
   MODEL_TO_LOAD: 'results/models/model.h5'
   IMAGES: 'documents/generated_images/'
   LOGS: 'results\\logs\\'
@@ -81,7 +81,7 @@ NN:
 
 # Training
 TRAIN:
-  EXPERIMENT_TYPE: 'single_train' # One of {'single_train', 'multi_train', 'hparam_search'}
+  EXPERIMENT_TYPE: 'multi_train' # One of {'single_train', 'multi_train', 'hparam_search'}
   TRAIN_SPLIT: 0.8
   VAL_SPLIT: 0.1
   TEST_SPLIT: 0.1
