--- a/config.yml
+++ b/config.yml
@@ -82,7 +82,7 @@ NN:
 
 # Training
 TRAIN:
-  EXPERIMENT_TYPE: 'multi_train' # One of {'single_train', 'multi_train', 'hparam_search'}
+  EXPERIMENT_TYPE: 'single_train' # One of {'single_train', 'multi_train', 'hparam_search'}
   TRAIN_SPLIT: 0.8
   VAL_SPLIT: 0.1
   TEST_SPLIT: 0.1
