--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,16 @@
 pyyaml==5.2
-matplotlib==3.1.1
-numpy==1.17.4
-tensorflow_gpu==2.0.1
-tensorboard==2.0.2
 lime==0.1.1.37
-scipy==1.4.1
-category_encoders==2.1.0
+tensorflow_gpu==2.0.1
+joblib==0.14.1
+kmodes==0.10.2
 imbalanced_learn==0.6.1
+tensorboard==2.0.2
+azureml_widgets==1.2.0
+dill==0.3.0
 tqdm==4.40.2
 pandas==0.25.3
-kmodes==0.10.2
-dill==0.3.0
+matplotlib==3.1.1
+sendgrid==6.3.0
+numpy==1.17.4
+scipy==1.4.1
+category_encoders==2.1.0
