--- a/config.yml
+++ b/config.yml
@@ -82,14 +82,14 @@ NN:
 
 # Training
 TRAIN:
-  EXPERIMENT_TYPE: 'single_train' # One of {'single_train', 'multi_train', 'hparam_search'}
+  EXPERIMENT: 'single_train'         # One of {'single_train', 'multi_train', 'hparam_search'}
   TRAIN_SPLIT: 0.8
   VAL_SPLIT: 0.1
   TEST_SPLIT: 0.1
   EPOCHS: 300
   BATCH_SIZE: 32
   POS_WEIGHT: 0.6
-  IMB_STRATEGY: 'class_weight'  # One of {'class_weight', 'random_oversample', 'smote', 'adasyn'}
+  IMB_STRATEGY: 'class_weight'            # One of {'class_weight', 'random_oversample', 'smote', 'adasyn'}
   METRIC_PREFERENCE: ['recall', 'precision', 'auc', 'loss']
   NUM_RUNS: 15
   THRESHOLDS: 0.5   # Can be changed to list of values in range [0, 1]
@@ -101,15 +101,15 @@ TRAIN:
     RANGES:
       NODES0: [80, 100]               # Discrete range
       NODES1: [60, 80]                # Discrete range
-      LAYERS: [2]                     # Discrete range
+      LAYERS: [2, 3, 4]               # Discrete range
       DROPOUT: [0.2, 0.4]             # Real range
       LR: [-3.0, -3.0]                # Real range on logarithmic scale (10^x)
-      OPTIMIZER: ['adam']             # Discrete range
+      OPTIMIZER: ['adam', 'sgd']      # Discrete range
       BETA_1: [-1.0, -1.0]            # 1st moment for Adam. Real range on log scale (1 - 10^x)
       BETA_2: [-3.0, -3.0]            # 2nd moment for Adam. Real range on log scale (1 - 10^x)
       L2_LAMBDA: [-2.0, -2.0]         # Real range on log scale (10^x)
-      BATCH_SIZE: [256]               # Discrete range
-      POS_WEIGHT: [0.6, 0.6]          # Weight multiplier for positive class. Real range
+      BATCH_SIZE: [128, 256]          # Discrete range
+      POS_WEIGHT: [0.6, 0.7]          # Weight multiplier for positive class. Real range
       IMB_STRATEGY: ['class_weight', 'smote', 'random_oversample']  # Discrete range
 
 # LIME explanations
@@ -122,6 +122,7 @@ LIME:
   SP:
     SAMPLE_FRACTION: 0.05
     NUM_EXPLANATIONS: 15
+  EXPERIMENT: 'submodular_pick'               # One of {'explain_client', 'lime_experiment', 'submodular_pick'}
 
 # Predictive horizon search experiment
 HORIZON_SEARCH:
@@ -134,9 +135,13 @@ HORIZON_SEARCH:
 PREDICTION:
   THRESHOLD: 0.5
   CLASS_NAMES: {0: 'not at risk', 1: 'at risk'}
+  EXPERIMENT: 'batch_prediction'              # One of {'batch_prediction', 'trending_prediction'}
 
 # Data clustering
 K-PROTOTYPES:
   K: 5
   N_RUNS: 30
   N_JOBS: 1
+  K_MIN: 2
+  K_MAX: 20
+  EXPERIMENT: 'cluster_clients'               # One of {'cluster_clients', 'silhouette_analysis'}
