--- a/config.yml
+++ b/config.yml
@@ -4,6 +4,7 @@ PATHS:
   RAW_SPDAT_DATA: 'data/raw/SPDATS.json'
   PROCESSED_DATA: 'data/processed/HIFIS_Processed.csv'
   PROCESSED_OHE_DATA: 'data/processed/HIFIS_Processed_OHE.csv'
+  PROCESSED_TS_DATA: 'data/processed/HIFIS_Processed_TS.csv'
   GROUND_TRUTH: 'data/processed/GroundTruth.csv'
   DATA_INFO: 'data/interpretability/data_info.yml'
   MODEL_WEIGHTS: 'results/models/'
@@ -63,6 +64,9 @@ DATA:
       NAME: 'Service'
       START: 'ServiceStartDate'
       END: 'ServiceEndDate'
+  TIME_SERIES:
+    TIME_STEP: 7                          # In days
+    T_X: 13                               # Length of time series input sequence
   SPDAT:
     INCLUDE_SPDATS: false
     SPDAT_CLIENTS_ONLY: false
@@ -83,6 +87,7 @@ NN:
 # Training
 TRAIN:
   EXPERIMENT: 'single_train'         # One of {'single_train', 'multi_train', 'hparam_search'}
+  MODEL: 'time_series'
   TRAIN_SPLIT: 0.8
   VAL_SPLIT: 0.1
   TEST_SPLIT: 0.1
