--- a/config.yml
+++ b/config.yml
@@ -68,7 +68,7 @@ DATA:
     TIME_STEP: 30                        # In days
     T_X: 6                               # Length of time series input sequence
     YEARS_OF_DATA: 3                     # Years of recent data to create time series records for.
-    FOLDS: 2
+    FOLDS: 7
   SPDAT:
     INCLUDE_SPDATS: false
     SPDAT_CLIENTS_ONLY: false
@@ -98,12 +98,12 @@ NN:
 
 # Training
 TRAIN:
-  EXPERIMENT: 'nested_cross_validation'         # One of {'single_train', 'multi_train', 'hparam_search', 'nested_cross_validation'}
-  MODEL_DEF: 'hifis_rnn_mlp'         # One of {'hifis_mlp', 'hifis_rnn_mlp'}
+  EXPERIMENT: 'cross_validation'         # One of {'single_train', 'multi_train', 'hparam_search', 'cross_validation'}
+  MODEL_DEF: 'hifis_mlp'         # One of {'hifis_mlp', 'hifis_rnn_mlp'}
   TRAIN_SPLIT: 0.9
   VAL_SPLIT: 0.05
   TEST_SPLIT: 0.05
-  EPOCHS: 300
+  EPOCHS: 1
   BATCH_SIZE: 1024
   POS_WEIGHT: 0.5
   IMB_STRATEGY: 'class_weight'            # One of {'class_weight', 'random_oversample', 'smote', 'adasyn'}
